Added a header and uploaded a sunset image and connected style.css

--- a/float/index.html
+++ b/float/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunset</title>
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    
+    <!--Додав основу (wrapper).-->
+    <div class="wrapper">
+        <header class="header">
+            <h1 class="header__heading">This is <span class="header__heading--special">Sunset</span> page </h1>
+            <!--Додав блок з картинкою.-->
+            <div class="header__img">
+                <img src="./images/sunset.jpg" alt="Sunset" />
+            </div>
+        </header>
+    </div>
 </body>
 </html>
