--- a/float/index.html
+++ b/float/index.html
@@ -18,37 +18,44 @@
             </div>
         </header>
         <!--Додав основну частину.-->
-    <main class="main">
-        <!--Додав першу секцію з загловком та текстом.-->
-        <section class="section">
+        <main class="main">
+            <!--Додав першу секцію з загловком та текстом.-->
+            <section class="section">
                 <!--Додав Menu.-->
-            <aside class="nav_wrap">
-                <h3 class="nav__heading">
+                <aside class="nav_wrap">
+                    <h3 class="nav__heading">
                         MENU
-                </h3>
-                <ul class="nav">
-                    <li class="nav_item">
-                            <a class="nav__link" href="#">Link 1</a>
-                    </li>
-                    <li class="nav_item">
-                        <a class="nav__link" href="#">Link 2</a>
-                    </li>
-                    <li class="nav_item">
-                        <a class="nav__link" href="#">Link 3</a>
-                    </li>
+                    </h3>
+                    <ul class="nav">
+                        <li class="nav_item">
+                                <a class="nav__link" href="#">Link 1</a>
+                        </li>
+                        <li class="nav_item">
+                            <a class="nav__link" href="#">Link 2</a>
+                        </li>
+                        <li class="nav_item">
+                            <a class="nav__link" href="#">Link 3</a>
+                        </li>
                     </ul>
-            </aside>
+                </aside>
+                <article class="article">
+                    <h2 class="article__heading">Sunset heading</h2>
+                    <p class="article__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl. Phasellus ac nisi at arcu iaculis semper non eu elit.
+                    </p>
+                    <p class="article__text-spec">
+                        Phasellus porttitor iaculis est sed pellentesque. Integer libero dui, congue et metus ut, mattis auctor sem. Etiam gravida dui ut congue aliquam. Maecenas ut enim felis.
+                    </p>
+                </article>
+            </section>
+        </main>
+        <!--Додав другу секцію з заголовком та текстом.-->
+        <section class="section">
             <article class="article">
                 <h2 class="article__heading">Sunset heading</h2>
                 <p class="article__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl. Phasellus ac nisi at arcu iaculis semper non eu elit.
+                    <span class="article__text--special"> ipsum dolor sit amet, consectetur adipiscing elit.</span> Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl.<span class="article__text--mod"> Phasellus ac nisi at arcu iaculis semper non eu elit.</span>
                 </p>
-                <p class="article__text-spec">
-                        Phasellus porttitor iaculis est sed pellentesque. Integer libero dui, congue et metus ut, mattis auctor sem. Etiam gravida dui ut congue aliquam. Maecenas ut enim felis.
-                </p>
-            </article>
-        </section>
-    </main>
     </div>
 </body>
 </html>
