Added two paragraphs to the second section

--- a/float/index.html
+++ b/float/index.html
@@ -28,7 +28,7 @@
                     </h3>
                     <ul class="nav">
                         <li class="nav_item">
-                                <a class="nav__link" href="#">Link 1</a>
+                            <a class="nav__link" href="#">Link 1</a>
                         </li>
                         <li class="nav_item">
                             <a class="nav__link" href="#">Link 2</a>
@@ -48,14 +48,22 @@
                     </p>
                 </article>
             </section>
+            <!--Додав другу секцію з заголовком та текстом.-->
+            <section class="section">
+                <article class="article">
+                    <h2 class="article__heading">Sunset heading</h2>
+                    <p class="article__text">
+                        <span class="article__text--special"> ipsum dolor sit amet, consectetur adipiscing elit.</span> Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl.<span class="article__text--mod"> Phasellus ac nisi at arcu iaculis semper non eu elit.</span>
+                    </p>
+                    <p class="article__text-spec">
+                        Phasellus porttitor iaculis est sed pellentesque. Integer libero dui, congue et metus ut, mattis auctor sem. Etiam gravida dui ut congue aliquam. Maecenas ut enim felis. Donec dignissim tempor enim. Nunc faucibus a leo nec congue. Sed tellus diam, aliquam id lectus fermentum,<span class="article__text--add"> laoreet rhoncus erat.</span>
+                    </p>
+                    <p class="article__text">
+                        Mauris gravida convallis auctor. Nulla facilisi.Suspendisse potenti. Nullam iaculis ornare arcu ut dignissim. Sed est urna, condimentum id massa eu, fringilla imperdiet purus. Praesent nec arcu a est convallis condimentum. In turpis tellus, sagittis finibus mi sit amet, ornare vulputate ante.
+                    </p>
+                </article>
+            </section>
         </main>
-        <!--Додав другу секцію з заголовком та текстом.-->
-        <section class="section">
-            <article class="article">
-                <h2 class="article__heading">Sunset heading</h2>
-                <p class="article__text">
-                    <span class="article__text--special"> ipsum dolor sit amet, consectetur adipiscing elit.</span> Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl.<span class="article__text--mod"> Phasellus ac nisi at arcu iaculis semper non eu elit.</span>
-                </p>
     </div>
 </body>
 </html>
