--- a/float/index.html
+++ b/float/index.html
@@ -64,6 +64,14 @@
                 </article>
             </section>
         </main>
+        <!--Додав заключний блок.-->
+        <footer class="footer">
+            <div class="footer__line">
+                <p class="footer__text">
+                    <span class="footer__text-special">2023</span> by <span class="footer__text-special">Serge Nikiforiv</span> - Design for students
+                </p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
