Added styles for sections and articles and some modifications for text

--- a/float/index.html
+++ b/float/index.html
@@ -26,7 +26,7 @@
         <!--Додав основну частину.-->
         <main class="main">
             <!--Додав першу секцію з загловком та текстом.-->
-            <section class="section">
+            <section class="section section-float">
                 <!--Додав Menu.-->
                 <aside class="nav_wrap">
                     <h3 class="nav__heading">
