Changed the name in the footer to my own

--- a/float/index.html
+++ b/float/index.html
@@ -74,7 +74,7 @@
         <footer class="footer">
             <div class="footer__line">
                 <p class="footer__text">
-                    <span class="footer__text-special">2023</span> by <span class="footer__text-special">Serge Nikiforiv</span> - Design for students
+                    <span class="footer__text-special">2023</span> by <span class="footer__text-special">Danil Khrust</span> - Design for everyone
                 </p>
             </div>
         </footer>
