--- a/float/index.html
+++ b/float/index.html
@@ -44,12 +44,12 @@
                         </li>
                     </ul>
                 </aside>
-                <article class="article">
+                <article class="article-item">
                     <h2 class="article__heading">Sunset heading</h2>
-                    <p class="article__text">
+                    <p class="article__text article__">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl. Phasellus ac nisi at arcu iaculis semper non eu elit.
                     </p>
-                    <p class="article__text-spec">
+                    <p class="article__text-spec article__">
                         Phasellus porttitor iaculis est sed pellentesque. Integer libero dui, congue et metus ut, mattis auctor sem. Etiam gravida dui ut congue aliquam. Maecenas ut enim felis.
                     </p>
                 </article>
