--- a/flex/index.html
+++ b/flex/index.html
@@ -39,12 +39,12 @@
                     </p>
                 </article>
                 <!--Додав Menu.-->
-                <aside class="nav_wrap">
+                <aside class="nav__wrap">
                     <h3 class="nav__heading">
                         MENU
                     </h3>
                     <ul class="nav">
-                        <li class="nav_item">
+                        <li class="nav__item">
                             <a class="nav__link" href="#">Link 1</a>
                         </li>
                         <li class="nav_item">
@@ -76,7 +76,7 @@
         <footer class="footer">
             <div class="footer__line">
                 <p class="footer__text">
-                    <span class="footer__text-special">2023</span> by <span class="footer__text-special">Serge Nikiforiv</span> - Design for students
+                    <span class="footer__text-special">2023</span> by <span class="footer__text-special">Danil Khrust</span> - Design for everyone
                 </p>
             </div>
         </footer>
