--- a/float/index.html
+++ b/float/index.html
@@ -28,12 +28,12 @@
             <!--Додав першу секцію з загловком та текстом.-->
             <section class="section section-float">
                 <!--Додав Menu.-->
-                <aside class="nav_wrap">
+                <aside class="nav__wrap">
                     <h3 class="nav__heading">
                         MENU
                     </h3>
                     <ul class="nav">
-                        <li class="nav_item">
+                        <li class="nav__item">
                             <a class="nav__link" href="#">Link 1</a>
                         </li>
                         <li class="nav_item">
@@ -44,12 +44,12 @@
                         </li>
                     </ul>
                 </aside>
-                <article class="article-item">
+                <article class="article__item">
                     <h2 class="article__heading">Sunset heading</h2>
-                    <p class="article__text article__">
+                    <p class="article__text article">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris augue dolor, mattis eu interdum in, interdum vitae massa. Nulla congue ligula quis sollicitudin ultrices. Mauris commodo erat augue, non volutpat velit volutpat nec. Pellentesque id odio blandit, posuere est gravida, convallis nisl. Phasellus ac nisi at arcu iaculis semper non eu elit.
                     </p>
-                    <p class="article__text-spec article__">
+                    <p class="article__text-spec article">
                         Phasellus porttitor iaculis est sed pellentesque. Integer libero dui, congue et metus ut, mattis auctor sem. Etiam gravida dui ut congue aliquam. Maecenas ut enim felis.
                     </p>
                 </article>
